[package]
name = "pqppvss"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-bindings = { path = "../rust-bindings-lattice-ibe" }
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
ark-poly = "0.5.0"
ark-bls12-381 = "0.5.0"
ark-secp256k1 = "0.5.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
sha2 = { version = "^0.10.0", default-features = false }