[package]
name = "private_polling"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
rand = "0.8.5"
criterion = "0.5.1"
sha2 = "0.10.8"
thiserror = "1.0.65"
curve25519-dalek = { version =  "4.1.3" , features = ["rand_core"]}
bulletproofs = "5.0.0"
rust-bindings = { path = "../../../rust-bindings-lattice-ibe" }
group = "0.13.0"
rand_core = "0.6.4"
rayon = "1.11.0"

[patch.crates-io]
serde-reflection = { git = "https://github.com/aptos-labs/serde-reflection", rev = "73b6bbf748334b71ff6d7d09d06a29e3062ca075" }
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }

[[bench]]
name = "benchmark"
harness = false